--- a/layouts/shortcodes/embed-pdf.html
+++ b/layouts/shortcodes/embed-pdf.html
@@ -19,7 +19,7 @@
     <span>Page: <span id="page_num"></span> / <span id="page_count"></span></span>
 </div>
 <div id="embed-pdf-container">
-    <canvas id="the-canvgitas"></canvas>
+    <canvas id="the-canvas"></canvas>
 </div>
 
 <script type="text/javascript">
@@ -27,8 +27,7 @@ window.onload = function() {
 // If absolute URL from the remote server is provided, configure the CORS
 // header on that server.
 
-var url = "{{.Site.BaseURL}}" + '{{ .Get "url" }}';
-console.log("did this work?")
+var url = "{{.Site.BaseURL}}" + "{{ .Get "url" }}";
 
 // Loaded via <script> tag, create shortcut to access PDF.js exports.
 var pdfjsLib = window['pdfjs-dist/build/pdf'];
